src/scheduled-query/azext_scheduled_query/grammar/scheduled_query/ScheduleQueryConditionParser.py
# --------------------------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License.txt in the project root for license information.
# --------------------------------------------------------------------------------------------
# pylint: disable=all
# Generated from ScheduleQueryCondition.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class ScheduleQueryConditionParser ( Parser ):

    grammarFileName = "ScheduleQueryCondition.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/'", "'.'", "'_'", "'\\'", "':'", "'%'",
                     "'-'", "','", "'|'", "'&'", "'('", "')'", "'=='", "'\\\"'",
                     "'\\''", "'*'", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "WHERE", "COMESFROM", "RESOURCE",
                      "COLUMN", "AT", "LEAST", "OUT", "OF", "VIOLATIONS",
                      "AGGREGATED", "POINTS", "AND", "INCLUDES", "EXCLUDES",
                      "OR", "OPERATOR", "NUMBER", "QUOTE", "WHITESPACE",
                      "NEWLINE", "WORD" ]

    RULE_expression = 0
    RULE_aggregation = 1
    RULE_comes_from = 2
    RULE_namespace = 3
    RULE_metric_with_quote = 4
    RULE_metric = 5
    RULE_query_with_quote = 6
    RULE_query = 7
    RULE_operator = 8
    RULE_threshold = 9
    RULE_resource_column = 10
    RULE_resource_id = 11
    RULE_resource = 12
    RULE_column = 13
    RULE_falling_period = 14
    RULE_at = 15
    RULE_least = 16
    RULE_violations = 17
    RULE_out = 18
    RULE_of = 19
    RULE_min_times = 20
    RULE_aggregated = 21
    RULE_points = 22
    RULE_evaluation_period = 23
    RULE_where = 24
    RULE_dimensions = 25
    RULE_dimension = 26
    RULE_dim_separator = 27
    RULE_dim_operator = 28
    RULE_dim_val_separator = 29
    RULE_dim_name = 30
    RULE_dim_values = 31
    RULE_dim_value = 32

    ruleNames =  [ "expression", "aggregation", "comes_from", "namespace",
                   "metric_with_quote", "metric", "query_with_quote", "query",
                   "operator", "threshold", "resource_column", "resource_id",
                   "resource", "column", "falling_period", "at", "least",
                   "violations", "out", "of", "min_times", "aggregated",
                   "points", "evaluation_period", "where", "dimensions",
                   "dimension", "dim_separator", "dim_operator", "dim_val_separator",
                   "dim_name", "dim_values", "dim_value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    WHERE=18
    COMESFROM=19
    RESOURCE=20
    COLUMN=21
    AT=22
    LEAST=23
    OUT=24
    OF=25
    VIOLATIONS=26
    AGGREGATED=27
    POINTS=28
    AND=29
    INCLUDES=30
    EXCLUDES=31
    OR=32
    OPERATOR=33
    NUMBER=34
    QUOTE=35
    WHITESPACE=36
    NEWLINE=37
    WORD=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregation(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.AggregationContext,0)


        def query_with_quote(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.Query_with_quoteContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.WHITESPACE)
            else:
                return self.getToken(ScheduleQueryConditionParser.WHITESPACE, i)

        def operator(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.OperatorContext,0)


        def threshold(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.ThresholdContext,0)


        def metric_with_quote(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.Metric_with_quoteContext,0)


        def comes_from(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.Comes_fromContext,0)


        def resource_column(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.Resource_columnContext,0)


        def dimensions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScheduleQueryConditionParser.DimensionsContext)
            else:
                return self.getTypedRuleContext(ScheduleQueryConditionParser.DimensionsContext,i)


        def falling_period(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.Falling_periodContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.NEWLINE)
            else:
                return self.getToken(ScheduleQueryConditionParser.NEWLINE, i)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = ScheduleQueryConditionParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.aggregation()
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 67
                self.metric_with_quote()
                self.state = 68
                self.comes_from()


            self.state = 72
            self.query_with_quote()
            self.state = 73
            self.match(ScheduleQueryConditionParser.WHITESPACE)
            self.state = 74
            self.operator()
            self.state = 75
            self.threshold()
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 76
                self.match(ScheduleQueryConditionParser.WHITESPACE)
                self.state = 77
                self.resource_column()


            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self.match(ScheduleQueryConditionParser.WHITESPACE)
                    self.state = 81
                    self.dimensions()
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ScheduleQueryConditionParser.WHITESPACE:
                self.state = 87
                self.match(ScheduleQueryConditionParser.WHITESPACE)
                self.state = 88
                self.falling_period()


            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ScheduleQueryConditionParser.NEWLINE:
                self.state = 91
                self.match(ScheduleQueryConditionParser.NEWLINE)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggregationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(ScheduleQueryConditionParser.WORD, 0)

        def WHITESPACE(self):
            return self.getToken(ScheduleQueryConditionParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_aggregation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregation" ):
                listener.enterAggregation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregation" ):
                listener.exitAggregation(self)




    def aggregation(self):

        localctx = ScheduleQueryConditionParser.AggregationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_aggregation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ScheduleQueryConditionParser.WORD)
            self.state = 98
            self.match(ScheduleQueryConditionParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comes_fromContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMESFROM(self):
            return self.getToken(ScheduleQueryConditionParser.COMESFROM, 0)

        def WHITESPACE(self):
            return self.getToken(ScheduleQueryConditionParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_comes_from

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComes_from" ):
                listener.enterComes_from(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComes_from" ):
                listener.exitComes_from(self)




    def comes_from(self):

        localctx = ScheduleQueryConditionParser.Comes_fromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comes_from)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ScheduleQueryConditionParser.COMESFROM)
            self.state = 101
            self.match(ScheduleQueryConditionParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.WORD)
            else:
                return self.getToken(ScheduleQueryConditionParser.WORD, i)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)




    def namespace(self):

        localctx = ScheduleQueryConditionParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 103
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ScheduleQueryConditionParser.T__0) | (1 << ScheduleQueryConditionParser.T__1) | (1 << ScheduleQueryConditionParser.WORD))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ScheduleQueryConditionParser.T__0) | (1 << ScheduleQueryConditionParser.T__1) | (1 << ScheduleQueryConditionParser.WORD))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metric_with_quoteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self):
            return self.getToken(ScheduleQueryConditionParser.WHITESPACE, 0)

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.QUOTE)
            else:
                return self.getToken(ScheduleQueryConditionParser.QUOTE, i)

        def metric(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.MetricContext,0)


        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_metric_with_quote

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetric_with_quote" ):
                listener.enterMetric_with_quote(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetric_with_quote" ):
                listener.exitMetric_with_quote(self)




    def metric_with_quote(self):

        localctx = ScheduleQueryConditionParser.Metric_with_quoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_metric_with_quote)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ScheduleQueryConditionParser.QUOTE]:
                self.state = 108
                self.match(ScheduleQueryConditionParser.QUOTE)
                self.state = 109
                self.metric()
                self.state = 110
                self.match(ScheduleQueryConditionParser.QUOTE)
                pass
            elif token in [ScheduleQueryConditionParser.T__0, ScheduleQueryConditionParser.T__1, ScheduleQueryConditionParser.T__2, ScheduleQueryConditionParser.T__3, ScheduleQueryConditionParser.T__4, ScheduleQueryConditionParser.T__5, ScheduleQueryConditionParser.T__6, ScheduleQueryConditionParser.T__7, ScheduleQueryConditionParser.T__8, ScheduleQueryConditionParser.WHITESPACE, ScheduleQueryConditionParser.WORD]:
                self.state = 112
                self.metric()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 115
            self.match(ScheduleQueryConditionParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetricContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.WORD)
            else:
                return self.getToken(ScheduleQueryConditionParser.WORD, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.WHITESPACE)
            else:
                return self.getToken(ScheduleQueryConditionParser.WHITESPACE, i)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_metric

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetric" ):
                listener.enterMetric(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetric" ):
                listener.exitMetric(self)




    def metric(self):

        localctx = ScheduleQueryConditionParser.MetricContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_metric)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 117
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ScheduleQueryConditionParser.T__0) | (1 << ScheduleQueryConditionParser.T__1) | (1 << ScheduleQueryConditionParser.T__2) | (1 << ScheduleQueryConditionParser.T__3) | (1 << ScheduleQueryConditionParser.T__4) | (1 << ScheduleQueryConditionParser.T__5) | (1 << ScheduleQueryConditionParser.T__6) | (1 << ScheduleQueryConditionParser.T__7) | (1 << ScheduleQueryConditionParser.T__8) | (1 << ScheduleQueryConditionParser.WHITESPACE) | (1 << ScheduleQueryConditionParser.WORD))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_with_quoteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.QUOTE)
            else:
                return self.getToken(ScheduleQueryConditionParser.QUOTE, i)

        def query(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.QueryContext,0)


        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_query_with_quote

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_with_quote" ):
                listener.enterQuery_with_quote(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_with_quote" ):
                listener.exitQuery_with_quote(self)




    def query_with_quote(self):

        localctx = ScheduleQueryConditionParser.Query_with_quoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_query_with_quote)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(ScheduleQueryConditionParser.QUOTE)
            self.state = 123
            self.query()
            self.state = 124
            self.match(ScheduleQueryConditionParser.QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.WORD)
            else:
                return self.getToken(ScheduleQueryConditionParser.WORD, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.WHITESPACE)
            else:
                return self.getToken(ScheduleQueryConditionParser.WHITESPACE, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.NUMBER)
            else:
                return self.getToken(ScheduleQueryConditionParser.NUMBER, i)

        def OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.OPERATOR)
            else:
                return self.getToken(ScheduleQueryConditionParser.OPERATOR, i)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.AND)
            else:
                return self.getToken(ScheduleQueryConditionParser.AND, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ScheduleQueryConditionParser.OR)
            else:
                return self.getToken(ScheduleQueryConditionParser.OR, i)

        def where(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScheduleQueryConditionParser.WhereContext)
            else:
                return self.getTypedRuleContext(ScheduleQueryConditionParser.WhereContext,i)


        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = ScheduleQueryConditionParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ScheduleQueryConditionParser.WORD]:
                    self.state = 126
                    self.match(ScheduleQueryConditionParser.WORD)
                    pass
                elif token in [ScheduleQueryConditionParser.WHITESPACE]:
                    self.state = 127
                    self.match(ScheduleQueryConditionParser.WHITESPACE)
                    pass
                elif token in [ScheduleQueryConditionParser.NUMBER]:
                    self.state = 128
                    self.match(ScheduleQueryConditionParser.NUMBER)
                    pass
                elif token in [ScheduleQueryConditionParser.OPERATOR]:
                    self.state = 129
                    self.match(ScheduleQueryConditionParser.OPERATOR)
                    pass
                elif token in [ScheduleQueryConditionParser.AND]:
                    self.state = 130
                    self.match(ScheduleQueryConditionParser.AND)
                    pass
                elif token in [ScheduleQueryConditionParser.OR]:
                    self.state = 131
                    self.match(ScheduleQueryConditionParser.OR)
                    pass
                elif token in [ScheduleQueryConditionParser.WHERE]:
                    self.state = 132
                    self.where()
                    pass
                elif token in [ScheduleQueryConditionParser.T__9]:
                    self.state = 133
                    self.match(ScheduleQueryConditionParser.T__9)
                    pass
                elif token in [ScheduleQueryConditionParser.T__1]:
                    self.state = 134
                    self.match(ScheduleQueryConditionParser.T__1)
                    pass
                elif token in [ScheduleQueryConditionParser.T__0]:
                    self.state = 135
                    self.match(ScheduleQueryConditionParser.T__0)
                    pass
                elif token in [ScheduleQueryConditionParser.T__10]:
                    self.state = 136
                    self.match(ScheduleQueryConditionParser.T__10)
                    pass
                elif token in [ScheduleQueryConditionParser.T__11]:
                    self.state = 137
                    self.match(ScheduleQueryConditionParser.T__11)
                    pass
                elif token in [ScheduleQueryConditionParser.T__2]:
                    self.state = 138
                    self.match(ScheduleQueryConditionParser.T__2)
                    pass
                elif token in [ScheduleQueryConditionParser.T__3]:
                    self.state = 139
                    self.match(ScheduleQueryConditionParser.T__3)
                    pass
                elif token in [ScheduleQueryConditionParser.T__4]:
                    self.state = 140
                    self.match(ScheduleQueryConditionParser.T__4)
                    pass
                elif token in [ScheduleQueryConditionParser.T__5]:
                    self.state = 141
                    self.match(ScheduleQueryConditionParser.T__5)
                    pass
                elif token in [ScheduleQueryConditionParser.T__6]:
                    self.state = 142
                    self.match(ScheduleQueryConditionParser.T__6)
                    pass
                elif token in [ScheduleQueryConditionParser.T__7]:
                    self.state = 143
                    self.match(ScheduleQueryConditionParser.T__7)
                    pass
                elif token in [ScheduleQueryConditionParser.T__8]:
                    self.state = 144
                    self.match(ScheduleQueryConditionParser.T__8)
                    pass
                elif token in [ScheduleQueryConditionParser.T__12]:
                    self.state = 145
                    self.match(ScheduleQueryConditionParser.T__12)
                    pass
                elif token in [ScheduleQueryConditionParser.T__13]:
                    self.state = 146
                    self.match(ScheduleQueryConditionParser.T__13)
                    pass
                elif token in [ScheduleQueryConditionParser.T__14]:
                    self.state = 147
                    self.match(ScheduleQueryConditionParser.T__14)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ScheduleQueryConditionParser.T__0) | (1 << ScheduleQueryConditionParser.T__1) | (1 << ScheduleQueryConditionParser.T__2) | (1 << ScheduleQueryConditionParser.T__3) | (1 << ScheduleQueryConditionParser.T__4) | (1 << ScheduleQueryConditionParser.T__5) | (1 << ScheduleQueryConditionParser.T__6) | (1 << ScheduleQueryConditionParser.T__7) | (1 << ScheduleQueryConditionParser.T__8) | (1 << ScheduleQueryConditionParser.T__9) | (1 << ScheduleQueryConditionParser.T__10) | (1 << ScheduleQueryConditionParser.T__11) | (1 << ScheduleQueryConditionParser.T__12) | (1 << ScheduleQueryConditionParser.T__13) | (1 << ScheduleQueryConditionParser.T__14) | (1 << ScheduleQueryConditionParser.WHERE) | (1 << ScheduleQueryConditionParser.AND) | (1 << ScheduleQueryConditionParser.OR) | (1 << ScheduleQueryConditionParser.OPERATOR) | (1 << ScheduleQueryConditionParser.NUMBER) | (1 << ScheduleQueryConditionParser.WHITESPACE) | (1 << ScheduleQueryConditionParser.WORD))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATOR(self):
            return self.getToken(ScheduleQueryConditionParser.OPERATOR, 0)

        def WHITESPACE(self):
            return self.getToken(ScheduleQueryConditionParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = ScheduleQueryConditionParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(ScheduleQueryConditionParser.OPERATOR)
            self.state = 153
            self.match(ScheduleQueryConditionParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThresholdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ScheduleQueryConditionParser.NUMBER, 0)

        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_threshold

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThreshold" ):
                listener.enterThreshold(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThreshold" ):
                listener.exitThreshold(self)




    def threshold(self):

        localctx = ScheduleQueryConditionParser.ThresholdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_threshold)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(ScheduleQueryConditionParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Resource_columnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def resource(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.ResourceContext,0)


        def column(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.ColumnContext,0)


        def resource_id(self):
            return self.getTypedRuleContext(ScheduleQueryConditionParser.Resource_idContext,0)


        def getRuleIndex(self):
            return ScheduleQueryConditionParser.RULE_resource_column
